deploy: b3ca808156ad3a68dc983c260bba79077481850a

--- a/index.html
+++ b/index.html
@@ -230,6 +230,26 @@
   </div>
 </div>
 
+  <footer>
+  <div class="mx-auto max-w-7xl px-6 py-12 md:flex md:items-center md:justify-between lg:px-8">
+    <div class="flex justify-center space-x-6 md:order-3">
+      <a href="#" class="text-gray-400 hover:text-gray-500">
+        <span class="sr-only">Linkedin</span>
+        <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="-m-1.5 p-1.5">
+          <img class="h-7 w-auto" src="/assets/images/logo-linkedin.png" alt="linkedin logo">
+        </a>
+      </a>
+    </div>
+    <div class="flex justify-center space-x-6 md:order-1">
+      <img class="h-11 w-auto" src="/assets/images/logo_edit.png" alt="logo pour edit agency">
+    </div>
+    <div class="mt-8 md:order-1 md:mt-0">
+      <p class="text-center text-xs leading-5 text-gray-500">Ce site internet est un site basse consommation.</p>
+      <p class="text-center text-xs leading-5 text-gray-500">&copy; 2024 edit. agency. Tous droits réservés.</p>
+    </div>
+  </div>
+</footer>
+
   
 
 </body>
