--- a/index.html
+++ b/index.html
@@ -230,6 +230,19 @@
   </div>
 </div>
 
+  <div id="contact" class="background-green">
+  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-10 pt-20 sm:pb-10 lg:px-30 xl:p-20">
+    <div class="mx-auto max-w-2xl text-semi-white text-center">
+      <h2 class="text-3xl font-bold sm:text-3xl">contactez-moi.</h2>
+      <p class="mt-6 text-base">Par <a class="email" href="mailto:tania@editagencyparis.com">email</a> ou en sélectionnant un moment pour discuter. </p>
+    </div>
+    <!-- Calendly inline widget begin -->
+    <div class="calendly-inline-widget" data-url="https://calendly.com/tania-rq4/30min" style="min-width:320px;height:700px;"></div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+    <!-- Calendly inline widget end -->
+</div>
+</div>
+
   <footer>
   <div class="mx-auto max-w-7xl px-6 py-12 md:flex md:items-center md:justify-between lg:px-8">
     <div class="flex justify-center space-x-6 md:order-3">
