--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       </button>
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Missions</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Valeurs</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">À propos</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Références</a>
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Contact</a>
+      <a href="#mission" class="text-sm font-semibold leading-6 text-gray-900">Missions</a>
+      <a href="#valeurs" class="text-sm font-semibold leading-6 text-gray-900">Valeurs</a>
+      <a href="#founder" class="text-sm font-semibold leading-6 text-gray-900">À propos</a>
+      <a href="#references" class="text-sm font-semibold leading-6 text-gray-900">Références</a>
+      <a href="#contact" class="text-sm font-semibold leading-6 text-gray-900">Contact</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
       <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="-m-1.5 p-1.5">
@@ -59,11 +59,11 @@
       <div class="mt-6 flow-root">
         <div class="-my-6 divide-y divide-gray-500/10">
           <div class="space-y-2 py-6">
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Missions</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Valeurs</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">À propos</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Références</a>
-            <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Contact</a>
+            <a href="#mission" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Missions</a>
+            <a href="#valeurs" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Valeurs</a>
+            <a href="#founder" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">À propos</a>
+            <a href="#references" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Références</a>
+            <a href="#contact" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Contact</a>
           </div>
         </div>
       </div>
@@ -85,13 +85,15 @@
     </div>
   </div>
   <div class="pb-10">
-    <svg class="h-10 w-10 mx-auto text-semi-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path>
-    </svg>
+    <a href="#mission">
+      <svg class="h-10 w-10 mx-auto text-semi-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path>
+      </svg>
+    </a>
   </div>
 </div>
 
-  <div>
+  <div id="mission">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-2xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
@@ -118,7 +120,7 @@
   </div>
 </div>
 
-  <div class="background-green">
+  <div id="valeurs" class="background-green">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold text-semi-white sm:text-3xl">valeurs.</h2>
@@ -154,7 +156,7 @@
   </div>
 </div>
 
-  <div>
+  <div id="founder">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">fondatrice.</h2>
@@ -176,7 +178,7 @@
           </figure>
         </div>
         <div class="mt-10 flex items-center justify-center">
-          <a href="#" class="rounded-md background-green px-10 py-3 text-sm font-semibold text-semi-white shadow-sm hover:bg-green-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Contactez-moi</a>
+          <a href="#contact" class="rounded-md background-green px-10 py-3 text-sm font-semibold text-semi-white shadow-sm hover:bg-green-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Contactez-moi</a>
         </div>
       </section>
     </div>
@@ -194,7 +196,7 @@
   </div>
 </div>
 
-  <div>
+  <div id="references">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-60 lg:px-30 xl:p-30">
       <h2 class="text-3xl font-bold text-center">références.</h2>
     <div class="py-12 sm:py-12">
