deploy: 4573e60198de4b4fc249c803da6bb6c802fdd84d

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </div>
 
   <div id="mission">
-  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
+  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-30 sm:pt-30 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-2xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
       <p class="mt-6 text-sm">Chez <b>edit. agency</b> notre mission est claire : donner vie à vos idées, construire des ponts entre votre entreprise et votre public cible, tout en restant fidèle à nos valeurs fondamentales : <b>l'environnement</b> et <b>la transparence</b>.</p>
@@ -121,7 +121,7 @@
 </div>
 
   <div id="valeurs" class="background-green">
-  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
+  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold text-semi-white sm:text-3xl">valeurs.</h2>
     </div>
@@ -157,7 +157,7 @@
 </div>
 
   <div id="founder">
-  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
+  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-30 sm:pt-30 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">fondatrice.</h2>
       <section class="isolate overflow-hidden">
@@ -186,7 +186,7 @@
 </div>
 
   <div class="background-green">
-  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-60 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
+  <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-2xl text-semi-white text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">pourquoi.</h2>
       <p class="mt-6 text-base">Nous sommes convaincus que la <b>technologie</b> est bien plus qu'un secteur, c'est une <b>force transformative</b>. Parce que la Tech impacte et bouleverse tous les secteurs, casse les codes établis et ouvre de nouveaux champs de possibilités.</p>
@@ -236,7 +236,7 @@
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-10 pt-20 sm:pb-10 lg:px-30 xl:p-20">
     <div class="mx-auto max-w-2xl text-semi-white text-center">
       <h2 class="text-3xl font-bold sm:text-3xl">contactez-moi.</h2>
-      <p class="mt-6 text-base">Par <a class="email" href="mailto:tania@editagencyparis.com">email</a> ou en sélectionnant un moment pour discuter. </p>
+      <p class="p-6 text-base">Par <a class="email" href="mailto:tania@editagencyparis.com">email</a> ou en sélectionnant un moment pour discuter. </p>
     </div>
     <!-- Calendly inline widget begin -->
     <div class="calendly-inline-widget" data-url="https://calendly.com/tania-rq4/30min" style="min-width:320px;height:700px;"></div>
@@ -246,21 +246,19 @@
 </div>
 
   <footer>
-  <div class="mx-auto max-w-7xl px-6 py-12 md:flex md:items-center md:justify-between lg:px-8">
-    <div class="flex justify-center space-x-6 md:order-3">
-      <a href="#" class="text-gray-400 hover:text-gray-500">
-        <span class="sr-only">Linkedin</span>
-        <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="-m-1.5 p-1.5">
-          <img class="h-7 w-auto" src="/assets/images/logo-linkedin.png" alt="linkedin logo">
-        </a>
-      </a>
-    </div>
-    <div class="flex justify-center space-x-6 md:order-1">
+  <div class="mx-auto max-w-7xl px-6 py-12 flex items-center justify-between lg:px-8">
+    <div class="flex justify-center space-x-6 order-1 md:order-1">
       <img class="h-11 w-auto" src="/assets/images/logo_edit.png" alt="logo pour edit agency">
     </div>
-    <div class="mt-8 md:order-1 md:mt-0">
+    <div class="order-2 md:order-2 md:mt-0">
       <p class="text-center text-xs leading-5 text-gray-500">Ce site internet est un site basse consommation.</p>
       <p class="text-center text-xs leading-5 text-gray-500">&copy; 2024 edit. agency. Tous droits réservés.</p>
+    </div>
+    <div class="flex justify-center space-x-6 order-3 md:order-3">
+      <span class="sr-only">Linkedin</span>
+      <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="-m-1.5 p-1.5">
+        <img class="h-7 w-auto" src="/assets/images/logo-linkedin.png" alt="linkedin logo">
+      </a>
     </div>
   </div>
 </footer>
