deploy: fd2406766ea17bf31bdeda4f0daa80b29aeab550

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold text-semi-white sm:text-3xl">valeurs.</h2>
     </div>
-    <div class="mx-auto max-w-2xl lg:max-w-none">
-      <dl class="grid mt-6 max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
+    <div class="mx-auto max-w-2xl lg:max-w-none mt-6">
+      <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
         <div class="flex flex-col">
           <dt class="text-base font-bold leading-7 text-semi-white">
             Environnement
@@ -236,13 +236,13 @@
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-10 pt-20 sm:pb-10 lg:px-30 xl:p-20">
     <div class="mx-auto max-w-2xl text-semi-white text-center">
       <h2 class="text-3xl font-bold sm:text-3xl">contactez-moi.</h2>
-      <p class="p-6 text-base">Par <a class="email" href="mailto:tania@editagencyparis.com">email</a> ou en sélectionnant un moment pour discuter. </p>
+      <p class="pt-6 mb-6 sm:mb-1 text-base">Par <a class="email" href="mailto:tania@editagencyparis.com">email</a> ou en sélectionnant un moment pour discuter. </p>
     </div>
     <!-- Calendly inline widget begin -->
     <div class="calendly-inline-widget" data-url="https://calendly.com/tania-rq4/30min" style="min-width:320px;height:700px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <!-- Calendly inline widget end -->
-</div>
+  </div>
 </div>
 
   <footer>
