--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-30 sm:pt-30 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-2xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
-      <p class="mt-6 text-sm">Chez <b>edit. agency</b> notre mission est claire : donner vie à vos idées, construire des ponts entre votre entreprise et votre public cible, tout en restant fidèle à nos valeurs fondamentales : <b>l'environnement</b> et <b>la transparence</b>.</p>
-      <p class="mt-2 text-sm">Nous nous engageons à élaborer des <b>stratégies de communication novatrices</b>, respectueuses de la planète et intégrant les dernières avancées technologiques pour propulser votre message vers de nouveaux sommets.</p>
+      <p class="mt-6 text-sm">Chez <b>edit. agency</b>, nous avons une mission qui nous anime quotidiennement : élever votre voix - et ce, par n’importe quelle voie. Nous avons à cœur de développer des <b>stratégies de communication sur-mesure, adaptées à vos objectifs.</b></p>
+      <!-- <p class="mt-2 text-sm">Nous sommes convaincus que la communication doit avant tout accompagner les enjeux de <b>réputation et de croissance d’une entreprise</b>. Notre credo : sortir de sa zone de confort pour redoubler de créativité. Car nous ne sommes confortables que dans l’inconfortable.</p> -->
       <dl class="mx-auto mt-10 grid max-w-2xl grid-cols-3 gap-y-10 sm:gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-5">
         <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
           <dt class="text-xs font-semibold leading-4">Relations publiques</dt>
@@ -129,26 +129,26 @@
       <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
         <div class="flex flex-col">
           <dt class="text-base font-bold leading-7 text-semi-white">
-            Environnement
+            Collaboration
           </dt>
           <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-semi-white">
-            <p class="flex-auto">edit. agency est fière d'être une agence de communication éco-responsable. De la réduction de notre empreinte carbone à la promotion de pratiques durables, nous intégrons activement des initiatives respectueuses de l'environnement dans toutes nos opérations.</p>
+            <p class="flex-auto">La force et l’impact de notre métier résident dans l’échange et la collaboration. Nos clients sont comme de véritables partenaires. Cette approche est au cœur de chacun de nos projets, car nous avançons en équipe vers un seul et même objectif : s’élever ensemble.</p>
           </dd>
         </div>
         <div class="flex flex-col">
           <dt class="text-base font-bold leading-7 text-semi-white">
-            Collectif
+            Transparence
           </dt>
           <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-semi-white">
-            <p class="flex-auto">edit. agency est fière d'être une agence de communication éco-responsable. De la réduction de notre empreinte carbone à la promotion de pratiques durables, nous intégrons activement des initiatives respectueuses de l'environnement dans toutes nos opérations.</p>
+            <p class="flex-auto">La transparence est un pilier fondamental de notre philosophie. Nous nous engageons à être clairs et honnêtes à chaque étape de notre collaboration, en partageant nos idées, nos processus et nos résultats – sans langue de bois. C’est cette relation de confiance qui nous guide quotidiennement.</p>
           </dd>
         </div>
         <div class="flex flex-col">
           <dt class="text-base font-bold leading-7 text-semi-white">
-            Audace
+            Excellence
           </dt>
           <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-semi-white">
-            <p class="flex-auto">edit. agency est fière d'être une agence de communication éco-responsable. De la réduction de notre empreinte carbone à la promotion de pratiques durables, nous intégrons activement des initiatives respectueuses de l'environnement dans toutes nos opérations.</p>
+            <p class="flex-auto">L’excellence est notre moteur quotidien. Chez edit. agency, nous repoussons sans cesse nos limites pour offrir des solutions de la plus haute qualité. Notre exigence pour le détail est le reflet de notre engagement à répondre et à dépasser vos attentes.</p>
           </dd>
         </div>
       </dl>
@@ -156,7 +156,7 @@
   </div>
 </div>
 
-  <div id="founder">
+    <div id="founder">
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-30 sm:pt-30 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-1xl text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">fondatrice.</h2>
@@ -189,9 +189,8 @@
   <div class="px-5 mx-5 md:px-30 md:mx-40 pb-40 pt-40 sm:pb-60 sm:pt-60 lg:px-30 xl:p-90">
     <div class="mx-auto max-w-2xl text-semi-white text-left">
       <h2 class="text-3xl font-bold sm:text-3xl">pourquoi.</h2>
-      <p class="mt-6 text-base">Nous sommes convaincus que la <b>technologie</b> est bien plus qu'un secteur, c'est une <b>force transformative</b>. Parce que la Tech impacte et bouleverse tous les secteurs, casse les codes établis et ouvre de nouveaux champs de possibilités.</p>
-      <p class="mt-2 text-base">Plus que jamais, les enjeux <b>sociétaux, environnementaux et technologiques</b> sont étroitement liés. C'est dans ce contexte que nous avons adopté la devise <b>'Tech care!'</b> chez <b>edit. agency</b>. Nous nous engageons à accompagner les acteurs de la Tech, ceux qui contribuent à réinventer le monde de demain, dans leurs <b>stratégies de communication</b>.</p>
-      <p class="mt-2 text-base">Rejoignez-nous dans cette aventure où la passion pour la Tech se marie harmonieusement avec notre engagement envers l'environnement. Ensemble, façonnons un monde où la Tech devient une force positive, inspirante et respectueuse. Parce que chez <b>edit. agency</b>, la Tech n'est pas seulement une affaire de communication, c'est une mission pour un avenir durable.</p>
+      <p class="mt-6 text-base">Nous sommes convaincus que la <b>technologie</b> est bien plus qu’un secteur : il s’agit avant tout d’une force transformatrice, qui nous pousse à ne jamais nous reposer sur nos acquis. Parce que la technologie bouleverse toutes les industries, casse les codes et ouvre de nouveaux champs de possibilités. Et parce qu’elle est au carrefour de tous nos enjeux actuels : <b>économiques, sociétaux et environnementaux</b>.</p>
+      <p class="mt-2 text-base">Nous nous engageons à accompagner toutes les <b>entreprises technologiques</b> qui souhaitent avoir un impact positif – quel qu’il soit – sur l’ensemble de notre société. Parce que chez <b>edit. agency</b>, nous croyons fermement que la technologie est la clé pour comprendre, décrypter et anticiper les défis et opportunités de demain.</p>
     </div>
   </div>
 </div>
@@ -212,7 +211,7 @@
             <img class="max-h-10 w-full object-contain" src="/assets/images/logo_atos.png" alt="atos">
           </div>
           <div class="bg-gray-400/5 p-6 sm:p-10">
-            <img class="max-h-10 w-full object-contain" src="/assets/images/logo_criteo.png" alt="Criteo">
+            <img class="max-h-10 w-full object-contain" src="/assets/images/logo_bzhunt.png" alt="BzHunt">
           </div>
           <div class="bg-gray-400/5 p-6 sm:p-10">
             <img class="max-h-14 w-full object-contain" src="/assets/images/logo_edelman.png" alt="Edelman">
