--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <title>edit. agency - edit. agency</title>
+  <title>edit. agency - Agence de communication à Paris</title>
+  <link rel="icon" type="image/png" href="/assets/images/logo_edit_favicon_64x64.png">
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
@@ -99,21 +100,21 @@
       <h2 class="text-3xl font-bold sm:text-3xl">mission.</h2>
       <p class="mt-6 text-sm">Chez <b>edit. agency</b>, nous avons une mission qui nous anime quotidiennement : élever votre voix - et ce, par n’importe quelle voie. Nous avons à cœur de développer des <b>stratégies de communication sur-mesure, adaptées à vos objectifs.</b></p>
       <!-- <p class="mt-2 text-sm">Nous sommes convaincus que la communication doit avant tout accompagner les enjeux de <b>réputation et de croissance d’une entreprise</b>. Notre credo : sortir de sa zone de confort pour redoubler de créativité. Car nous ne sommes confortables que dans l’inconfortable.</p> -->
-      <dl class="mx-auto mt-10 grid max-w-2xl grid-cols-3 gap-y-10 sm:gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-5">
-        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Relations publiques</dt>
+      <dl class="mx-auto mt-10 grid max-w-2xl gap-y-10 sm:gap-y-16 lg:mx-0 lg:max-w-none grid-cols-2 sm:grid-cols-3 lg:grid-cols-5">
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Relations publiques</dt>
         </div>
-        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Social Media</dt>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Social Media</dt>
         </div>
-        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Brand Content</dt>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Brand Content</dt>
         </div>
-        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Accompagnement de dirigeants</dt>
+        <div class="flex flex-col gap-y-3 border-l border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Accompagnement de dirigeants</dt>
         </div>
-        <div class="flex flex-col gap-y-3 border-l border-r border-grey/10 text-center">
-          <dt class="text-xs font-semibold leading-4">Prête-plume</dt>
+        <div class="flex flex-col gap-y-3 border-l border-r border-grey/10 text-center px-2">
+          <dt class="text-xs font-semibold leading-4 break-words whitespace-normal">Prête-plume</dt>
         </div>
       </dl>
     </div>
@@ -253,9 +254,9 @@
       <p class="text-center text-xs leading-5 text-gray-500">Ce site internet est un site basse consommation.</p>
       <p class="text-center text-xs leading-5 text-gray-500">&copy; 2024 edit. agency. Tous droits réservés.</p>
     </div>
-    <div class="flex justify-center space-x-6 order-3 md:order-3">
-      <span class="sr-only">Linkedin</span>
-      <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="-m-1.5 p-1.5">
+    <div class="flex items-center justify-center space-x-6 order-3 md:order-3">
+      <a href="https://www.linkedin.com/in/taniagaycommunication/" target="_blank" class="p-2">
+        <span class="sr-only">Linkedin</span>
         <img class="h-7 w-auto" src="/assets/images/logo-linkedin.png" alt="linkedin logo">
       </a>
     </div>
